--- a/hospital-chief/src/main/resources/templates/chief.html
+++ b/hospital-chief/src/main/resources/templates/chief.html
@@ -27,7 +27,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
-<script src="/static/js/websocket.js"></script>
+<script th:src="@{/js/websocket.js}"></script>
 
 </body>
 </html>
